--- a/.github/workflows/test-android-sdk.yml
+++ b/.github/workflows/test-android-sdk.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const sha = context.payload.workflow_run.head_sha;
+            const sha = context.payload.workflow_run ? context.payload.workflow_run.head_sha : context.sha;
             const { owner, repo } = context.repo;
             await github.rest.repos.createCommitStatus({
               owner,
@@ -58,7 +58,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Flipt
-        uses: flipt-io/setup-action@v0.3.1
+        uses: flipt-io/setup-action@v0.4.0
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -162,7 +162,7 @@ jobs:
           path: ./flipt-client-kotlin-android/build/reports
 
   test-prebuilt:
-    name: Integration Tests (Prebuilt Engine)
+    name: Integration Tests (Released Engine)
     runs-on: ubuntu-22.04
     if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.release_tag != '' }}
     timeout-minutes: 20
@@ -183,7 +183,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Flipt
-        uses: flipt-io/setup-action@v0.3.1
+        uses: flipt-io/setup-action@v0.4.0
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
