--- a/flipt-client-dart/pubspec.yaml
+++ b/flipt-client-dart/pubspec.yaml
@@ -2,35 +2,35 @@ dependencies:
   ffi: ^2.0.1
   json_annotation: ^4.9.0
   path: ^1.9.0
-description: "Flipt Client Evaluation SDK for Dart
+description: 'Flipt Client Evaluation SDK for Dart
 
 
   **Note:** As of 1.0.0, `FliptEvaluationClient` has been renamed to `FliptClient`
   for consistency with other SDKs and Dart idioms. Update your code accordingly. 0.x
   versions are now deprecated.
 
-  "
+  '
 dev_dependencies:
   build_runner: ^2.3.3
-  ffigen: ">=9.0.0 <20.0.0"
+  ffigen: '>=9.0.0 <20.0.0'
   json_serializable: ^6.6.2
-  lints: ">=4.0.0 <7.0.0"
+  lints: '>=4.0.0 <7.0.0'
   test: ^1.21.0
 environment:
-  flutter: ">=1.20.0"
-  sdk: ">=2.17.0 <4.0.0"
+  flutter: '>=1.20.0'
+  sdk: '>=2.17.0 <4.0.0'
 files:
+- native/darwin_aarch64/libfliptengine.dylib
+- native/linux_aarch64/libfliptengine.so
+- native/linux_x86_64/libfliptengine.so
+- native/windows_x86_64/fliptengine.dll
+- ios/FliptEngineFFI.xcframework
+flutter:
+  assets:
   - native/darwin_aarch64/libfliptengine.dylib
   - native/linux_aarch64/libfliptengine.so
   - native/linux_x86_64/libfliptengine.so
   - native/windows_x86_64/fliptengine.dll
-  - ios/FliptEngineFFI.xcframework
-flutter:
-  assets:
-    - native/darwin_aarch64/libfliptengine.dylib
-    - native/linux_aarch64/libfliptengine.so
-    - native/linux_x86_64/libfliptengine.so
-    - native/windows_x86_64/fliptengine.dll
   plugin:
     platforms:
       android:
@@ -42,4 +42,4 @@ flutter:
         pluginClass: FliptClient
 homepage: https://flipt.io
 name: flipt_client
-version: 1.0.0
+version: 1.1.0
