--- a/flipt-client-java/build.gradle
+++ b/flipt-client-java/build.gradle
@@ -5,7 +5,6 @@ plugins {
     id 'maven-publish'
     id 'signing'
     id "com.diffplug.spotless" version "7.0.4"
-    id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'
 }
 
 group = 'io.flipt'
@@ -90,12 +89,11 @@ publishing {
     }
     repositories {
         maven {
-            def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
-            def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
-            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+            name = 'ossrh-staging-api'
+            url = "https://ossrh-staging-api.central.sonatype.com/service/local/staging/deploy/maven2/"
             credentials {
-                username = System.getenv("MAVEN_USERNAME")
-                password = System.getenv("MAVEN_PASSWORD")
+                username = System.getenv("SONATYPE_PORTAL_USERNAME")
+                password = System.getenv("SONATYPE_PORTAL_PASSWORD")
             }
         }
     }
@@ -106,21 +104,4 @@ signing {
     def signingPassphrase = System.getenv('PGP_PASSPHRASE')
     useInMemoryPgpKeys(signingKey, signingPassphrase)
     sign publishing.publications.maven
-}
-
-nexusPublishing {
-    repositories {
-        sonatype {
-            nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
-            snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
-            username = System.getenv("MAVEN_USERNAME")
-            password = System.getenv("MAVEN_PASSWORD")
-            packageGroup = "io.flipt"
-        }
-    }
-    // Enable auto-release
-    transitionCheckOptions {
-        maxRetries.set(60)  // Number of times to retry
-        delayBetween.set(java.time.Duration.ofSeconds(10))  // Time between retries
-    }
 }
