--- a/flipt-client-java/build.gradle
+++ b/flipt-client-java/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'maven-publish'
     id 'signing'
     id "com.diffplug.spotless" version "7.0.4"
+    id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'
 }
 
 group = 'io.flipt'
@@ -104,4 +105,21 @@ signing {
     def signingPassphrase = System.getenv('PGP_PASSPHRASE')
     useInMemoryPgpKeys(signingKey, signingPassphrase)
     sign publishing.publications.maven
+}
+
+nexusPublishing {
+    repositories {
+        sonatype {
+            nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
+            snapshotRepositoryUrl.set(uri("https://central.sonatype.com/repository/maven-snapshots/"))
+            username = System.getenv("SONATYPE_PORTAL_USERNAME")
+            password = System.getenv("SONATYPE_PORTAL_PASSWORD")
+            packageGroup = "io.flipt"
+        }
+    }
+    // Enable auto-release
+    transitionCheckOptions {
+        maxRetries.set(60)  // Number of times to retry
+        delayBetween.set(java.time.Duration.ofSeconds(10))  // Time between retries
+    }
 }
