--- a/flipt-engine-ffi/Cargo.toml
+++ b/flipt-engine-ffi/Cargo.toml
@@ -29,6 +29,9 @@ async-trait = "0.1"
 base64 = "0.22"
 log = "0.4"
 env_logger = "0.11"
+webpki-roots = "0.26"
+rustls-pemfile = "2.0"
+rustls = "0.23"
 
 [dependencies.flipt-evaluation]
 path = "../flipt-evaluation"
@@ -36,6 +39,7 @@ path = "../flipt-evaluation"
 [dev-dependencies]
 mockall = "0.13.0"
 mockito = "1.4.0"
+tokio-rustls = "0.26"
 
 [build-dependencies]
 cbindgen = "0.29.0"
