--- a/flipt-engine-ffi/Cargo.toml
+++ b/flipt-engine-ffi/Cargo.toml
@@ -31,7 +31,7 @@ log = "0.4"
 env_logger = "0.11"
 webpki-roots = "0.26"
 rustls-pemfile = "2.0"
-rustls = "0.23"
+rustls = { version = "0.23", features = ["ring"] }
 
 [dependencies.flipt-evaluation]
 path = "../flipt-evaluation"
