chore: use ring
Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/flipt-engine-ffi/Cargo.toml
+++ b/flipt-engine-ffi/Cargo.toml
@@ -40,6 +40,8 @@ path = "../flipt-evaluation"
 mockall = "0.13.0"
 mockito = "1.4.0"
 tokio-rustls = "0.26"
+rustls-pemfile = "2.0"
+rustls = { version = "0.23", features = ["ring"] }
 
 [build-dependencies]
 cbindgen = "0.29.0"
