chore: update rust versions to latest stable
- Update rustup update commands from nightly to stable in FFI engine workflows
- Upgrade Rust Docker images from 1.83.0 to 1.89.0 in WASM build containers
- Keep FFI build container at 1.83.0 for glibc compatibility

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/package-ffi-engine-darwin.yml
+++ b/.github/workflows/package-ffi-engine-darwin.yml
@@ -38,7 +38,7 @@ jobs:
 
       - name: Install Rust
         run: |
-          rustup update nightly
+          rustup update stable
           rustup default nightly
           rustup target add ${{ matrix.platform.target }}
 
