--- a/.github/workflows/package-ffi-engine-linux.yml
+++ b/.github/workflows/package-ffi-engine-linux.yml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Install Rust
         run: |
-          rustup update nightly
+          rustup update stable
 
       - name: Install musl-gcc
         run: |
