fix: Use relative tmp directory path in FFI SDK workflow
The workflow was creating /tmp (system directory) but the Go code exports
to tmp (relative workspace directory), causing build failures.

Signed-off-by: Mark Phelps <209477+markphelps@users.noreply.github.com>

--- a/.github/workflows/package-ffi-sdks.yml
+++ b/.github/workflows/package-ffi-sdks.yml
@@ -72,5 +72,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
         run: |
-          mkdir -p /tmp
+          mkdir -p tmp
           dagger run go run ./package/ffi --sdks=${{ inputs.sdks }} --push=true --tag=${{ inputs.tag }} --engine-tag=${{ inputs.engine-tag }}
