fix: add package-ffi-engine-android.yml to its own PR path
Signed-off-by: Matt Lampe <matt@lampe.io>

--- a/.github/workflows/package-ffi-engine-android.yml
+++ b/.github/workflows/package-ffi-engine-android.yml
@@ -5,6 +5,7 @@ on:
     paths:
       - "flipt-engine-ffi/**"
       - "flipt-evaluation/**"
+      - ".github/workflows/package-ffi-engine-android.yml"
   push:
     tags: ["flipt-engine-ffi-v**"]
 
