--- a/flipt-client-dart/pubspec.yaml
+++ b/flipt-client-dart/pubspec.yaml
@@ -12,7 +12,7 @@ description: 'Flipt Client Evaluation SDK for Dart
   '
 dev_dependencies:
   build_runner: ^2.3.3
-  ffigen: ">=9.0.0 <21.0.0"
+  ffigen: '>=9.0.0 <21.0.0'
   json_serializable: ^6.6.2
   lints: '>=4.0.0 <7.0.0'
   test: ^1.21.0
@@ -32,4 +32,4 @@ flutter:
         pluginClass: FliptClient
 homepage: https://flipt.io
 name: flipt_client
-version: 1.1.0
+version: 1.1.1
