--- a/.github/workflows/package-react-sdk.yml
+++ b/.github/workflows/package-react-sdk.yml
@@ -23,4 +23,4 @@ jobs:
           npm publish --access public
         working-directory: flipt-client-react
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_API_KEY }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_REACT_API_KEY }}
